--- a/stroke_analysis.ipynb
+++ b/stroke_analysis.ipynb
@@ -1130,9 +1130,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Stroke cases are more common in older patients. The median age of stroke patients appears to be higher than that of non-stroke patients. \n",
+    "##### Stroke cases are more common in older patients. The median age of stroke patients appears to be higher than that of non-stroke patients. \n",
     "\n",
-    "# Aging has been identified to be the most robust non-modifiable risk factor for stroke, which doubles the risk every 10 years after 55 years. "
+    "##### Aging has been identified to be the most robust non-modifiable risk factor for stroke, which doubles the risk every 10 years after 55 years. "
    ]
   },
   {
@@ -1274,7 +1274,7 @@
    "metadata": {},
    "source": [
     "--\n",
-    "### Look at how age and gender vs stroke"
+    "### Age & Gender vs Stroke"
    ]
   },
   {
