--- a/database.ipynb
+++ b/database.ipynb
@@ -8,41 +8,7 @@
    "source": [
     "# Import the dependencies.\n",
     "from pathlib import Path\n",
-    "from sqlalchemy import create_engine\n",
-    "import pandas as pd\n",
-    "\n",
-    "# Create a reference to the file. \n",
-    "#database_path = Path(\"../Resources/stroke_project3!.sqlite\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create Engine\n",
-    "#engine = create_engine(f\"sqlite:///{database_path}\")\n",
-    "#conn = engine.connect()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Query All Records in the the Database\n",
-    "#data = pd.read_sql(\"SELECT * FROM stroke_project3!\", conn)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#data.head()"
+    "import pandas as pd"
    ]
   },
   {
@@ -145,7 +111,7 @@
     "    return (\n",
     "        f\"Available Routes:<br/>\"\n",
     "        f\"/api/v1.0/stroke_demographic_indicators<br/>\"\n",
-    "        f\"/api/v1.0/roke_biological_indicators\"\n",
+    "        f\"/api/v1.0/stroke_biological_indicators\"\n",
     "    )\n"
    ]
   },
