--- a/database.ipynb
+++ b/database.ipynb
@@ -142,9 +142,12 @@
     "        subject_dict[\"work_type\"] = work_type\n",
     "        subject_dict[\"residence_type\"] = residence_type\n",
     "        subject_dict[\"stroke\"] = stroke\n",
-    "        all_subjects.append(subject_dict_dict)\n",
+    "        all_subjects.append(subject_dict)\n",
     "\n",
-    "    return jsonify(all_subjects)"
+    "    return jsonify(all_subjects)\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    app.run(debug=True)"
    ]
   }
  ],
