new changes and cleaned files

--- a/stroke_analysis_jelyum.ipynb
+++ b/stroke_analysis_jelyum.ipynb
@@ -851,6 +851,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stroke_df.to_csv('stroke_clean', index=False)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
