--- a/db_creation.ipynb
+++ b/db_creation.ipynb
@@ -9956,7 +9956,7 @@
     {
      "data": {
       "text/plain": [
-       "['stroke_info', 'stroke_predictors']"
+       "['stroke_predictors', 'stroke_info']"
       ]
      },
      "execution_count": 10,
@@ -9974,7 +9974,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "session = Session(engine)"
+    "session = Session(bind=engine)"
    ]
   },
   {
@@ -9983,12 +9983,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "indicators = Base.classes.stroke_predictors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from flask import Flask, jsonify"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
