--- a/stroke_analysis_jelyum.ipynb
+++ b/stroke_analysis_jelyum.ipynb
@@ -1522,32 +1522,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\yumai\\AppData\\Local\\Temp\\ipykernel_11364\\3484300245.py:2: SettingWithCopyWarning: \n",
+      "C:\\Users\\yumai\\AppData\\Local\\Temp\\ipykernel_2124\\3484300245.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  gluc_norm[\"avg_glucose_level\"] = \"NORMAL\"\n",
-      "C:\\Users\\yumai\\AppData\\Local\\Temp\\ipykernel_11364\\3484300245.py:5: SettingWithCopyWarning: \n",
+      "C:\\Users\\yumai\\AppData\\Local\\Temp\\ipykernel_2124\\3484300245.py:5: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  gluc_pre[\"avg_glucose_level\"] = \"PRE-DIABETIC\"\n",
-      "C:\\Users\\yumai\\AppData\\Local\\Temp\\ipykernel_11364\\3484300245.py:8: SettingWithCopyWarning: \n",
+      "C:\\Users\\yumai\\AppData\\Local\\Temp\\ipykernel_2124\\3484300245.py:8: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  gluc_diab[\"avg_glucose_level\"] = \"DIABETIC\"\n",
-      "C:\\Users\\yumai\\AppData\\Local\\Temp\\ipykernel_11364\\3484300245.py:11: SettingWithCopyWarning: \n",
+      "C:\\Users\\yumai\\AppData\\Local\\Temp\\ipykernel_2124\\3484300245.py:11: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1680,7 +1680,7 @@
        "4          Rural            NORMAL  25.4        Unknown       1  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1705,6 +1705,15 @@
     "\n",
     "gluc_grouped = pd.concat([gluc_norm, gluc_pre, gluc_diab, gluc_low], ignore_index=False, axis=0)\n",
     "gluc_grouped.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gluc_grouped.to_csv('stroke_bio', index=False)"
    ]
   },
   {
